[fix] z-index修正

--- a/nextjs/components/styles/header.module.scss
+++ b/nextjs/components/styles/header.module.scss
@@ -2,7 +2,7 @@
   position: fixed;
   width: 100%;
   box-sizing: border-box;
-  z-index: 999;
+  z-index: 99;
   display: grid;
   gap: 4rem;
   grid-auto-flow: column;
